# starting-ragchatbot-codebase

./: CLAUDE.md  frontend-changes.md  pyproject.toml
.github/workflows/: claude-code-review.yml
backend/: ai_generator.py  app.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_rag_system.py
frontend/: index.html  script.js  style.css
scripts/: check.sh  format.sh
